added img/vid folders and content, updated html to remove django templates

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="title-wrapper">
         <div class="title-side-img" id="coat-of-arms-div">
-            <img id="coat-of-arms-img" src="{% static 'ams/images/coat-of-arms-outline.png' %}" alt="pi kappa phi coat of arms">
+            <img id="coat-of-arms-img" src="images/coat-of-arms-outline.png" alt="pi kappa phi coat of arms">
         </div>
         <div class="title" id="title-div">
             <h1 id="title-english">PI KAPPA PHI</h1>
@@ -26,7 +26,7 @@
             <h3 id="title-uni">The Pennsylvania State University</h3>
         </div>
         <div class="title-side-img" id="star-shield-div">
-            <img id="star-shield-img" src="{% static 'ams/images/star-shield-outline.png' %}" alt="pi kappa phi star shield">
+            <img id="star-shield-img" src="images/star-shield-outline.png" alt="pi kappa phi star shield">
         </div>
     </div>
     <div id="nav-bar">
@@ -62,12 +62,12 @@
             <div id="rush-videos">
                 <div id="rush-vid-fa-2021-div">
                     <video id="rush-vid-fa-2021" controls>
-                        <source src="{% static 'ams/videos/PKP-RushVid-FA2021.mp4' %}" type="video/mp4">
+                        <source src="videos/PKP-RushVid-FA2021.mp4" type="video/mp4">
                     </video>
                 </div>
                 <div id="rush-vid-fa-2020-div">
                     <video id="rush-vid-fa-2020" controls>
-                        <source src="{% static 'ams/videos/PKP-RushVid-FA2020.mp4' %}" type="video/mp4">
+                        <source src="videos/PKP-RushVid-FA2020.mp4" type="video/mp4">
                     </video>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             </div>
             <div id="instagram-icon-div">
                 <a id="instagram-link-img" href="https://www.instagram.com/pikapp_psu/" target="_blank">
-                    <img id="instagram-icon-img" src="{% static 'ams/images/instagram-icon.png' %}" alt="instagram button with link">
+                    <img id="instagram-icon-img" src="images/instagram-icon.png" alt="instagram button with link">
                 </a>
                 <a id="instagram-link-txt" href="https://www.instagram.com/pikapp_psu/" target="_blank">
                     <p>@pikapp_psu</p>
