--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- style -->
     <link rel="stylesheet" href="style/style.css">
     <!-- jQuery -->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <!-- fonts -->
     <link rel="stylesheet" href="https://use.typekit.net/adw8ezw.css">
