added cool butons and formatted the nav bar, not done but good for now

--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
         <div class="title-side-img" id="coat-of-arms-div">
             <img id="coat-of-arms-img" src="images/coat-of-arms-outline.png" alt="pi kappa phi coat of arms">
         </div>
+        <div class="title-spacer" id="left-spacer-div">
+
+        </div>
         <div class="title" id="title-div">
             <h1 id="title-english">PI KAPPA PHI</h1>
             <h2 id="title-chapter">Alpha Mu Chapter</h2>
             <h3 id="title-uni">The Pennsylvania State University</h3>
+        </div>
+        <div class="title-spacer" id="right-spacer-div">
+            
         </div>
         <div class="title-side-img" id="star-shield-div">
             <img id="star-shield-img" src="images/star-shield-outline.png" alt="pi kappa phi star shield">
@@ -44,14 +50,14 @@
     </div>
     <div id="navbar-div">
         <nav class="nav justify-content-center">
-            <button type="button" id="button-home" onclick="showContent('home-template')">Home</button>
-            <button type="button" id="button-recruitment" onclick="showContent('recruitment-template')">Recruitment</button>
-            <button type="button" id="button-alumni" onclick="showContent('alumni-template')">Alumni</button>
-            <button type="button" id="button-current-brothers" onclick="showContent('current-brothers-template')">Current Brothers</button>
-            <button type="button" id="button-thon" onclick="showContent('thon-template')">THON</button>
-            <button type="button" id="button-penn-state" onclick="showContent('penn-state-template')">Penn State</button>
-            <button type="button" id="button-pi-kappa-phi" onclick="showContent('pi-kappa-phi-template')">Pi Kappa Phi</button>
-            <button type="button" id="button-contribute" onclick="showContent('contribute-template')">Contribute</button>
+            <button type="button" class="button-56" id="button-recruitment" onclick="showContent('recruitment-template')">Recruitment</button>
+            <button type="button" class="button-56" id="button-home" onclick="showContent('home-template')">Home</button>
+            <button type="button" class="button-56" id="button-alumni" onclick="showContent('alumni-template')">Alumni</button>
+            <button type="button" class="button-56" id="button-current-brothers" onclick="showContent('current-brothers-template')">Current Brothers</button>
+            <button type="button" class="button-56" id="button-thon" onclick="showContent('thon-template')">THON</button>
+            <button type="button" class="button-56" id="button-penn-state" onclick="showContent('penn-state-template')">Penn State</button>
+            <button type="button" class="button-56" id="button-pi-kappa-phi" onclick="showContent('pi-kappa-phi-template')">Pi Kappa Phi</button>
+            <button type="button" class="button-56" id="button-contribute" onclick="showContent('contribute-template')">Contribute</button>
         </nav>
     </div>
     <!-- END CONSISTENT CONTENT -->
